[gd_scene load_steps=5 format=3 uid="uid://bnly5uqbvtqg3"]

[ext_resource type="Script" uid="uid://b0p3gcesyxelj" path="res://scenes/settings.gd" id="1_5p8wc"]
[ext_resource type="Script" uid="uid://pfopgmc4i573" path="res://scenes/h_slider.gd" id="2_f4mfi"]
[ext_resource type="Script" uid="uid://c81kv81kckgkb" path="res://scenes/label_2_rd.gd" id="2_r6d6q"]
[ext_resource type="Script" uid="uid://mf8xak5pkpca" path="res://scenes/label_3.gd" id="3_6wm04"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_5p8wc")

[node name="Render Scale" type="Node2D" parent="."]

[node name="HSlider" type="HSlider" parent="Render Scale"]
offset_left = 120.0
offset_top = 64.0
offset_right = 336.0
offset_bottom = 80.0
min_value = 0.1
max_value = 2.0
step = 0.01
value = 1.0
script = ExtResource("2_f4mfi")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Render Scale"]
offset_left = 128.0
offset_top = 32.0
offset_right = 228.0
offset_bottom = 55.0
text = "Render Scale"
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="Render Scale"]
offset_left = 80.0
offset_top = 56.0
offset_right = 120.0
offset_bottom = 79.0
text = "1.0"
script = ExtResource("2_r6d6q")
metadata/_edit_use_anchors_ = true

[node name="Label3" type="Label" parent="Render Scale"]
offset_left = 336.0
offset_top = 56.0
offset_right = 376.0
offset_bottom = 79.0
script = ExtResource("3_6wm04")
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="Render Scale"]
offset_left = 16.0
offset_top = 48.0
offset_right = 67.0
offset_bottom = 79.0
text = "Reset"

[node name="GridContainer" type="GridContainer" parent="."]
offset_left = 120.0
offset_top = 152.0
offset_right = 219.0
offset_bottom = 192.0

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Anti-Aliasing"

[node name="OptionButton" type="OptionButton" parent="GridContainer"]
layout_mode = 2
item_count = 6
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "FXAA"
popup/item_1/id = 1
popup/item_2/text = "MSAA 2x"
popup/item_2/id = 2
popup/item_3/text = "MSAA 4x"
popup/item_3/id = 3
popup/item_4/text = "MSAA 8x"
popup/item_4/id = 4
popup/item_5/text = "TAA"
popup/item_5/id = 5

[node name="GridContainer2" type="GridContainer" parent="."]
offset_left = 448.0
offset_top = 24.0
offset_right = 610.0
offset_bottom = 82.0

[node name="Label" type="Label" parent="GridContainer2"]
layout_mode = 2
text = "Scaling Mode"

[node name="OptionButton2" type="OptionButton" parent="GridContainer2"]
layout_mode = 2
item_count = 3
popup/item_0/text = "Bilinear (Fastest)"
popup/item_0/id = 0
popup/item_1/text = "FSR 1.0 (Fast)"
popup/item_1/id = 1
popup/item_2/text = "FSR 2.2 (Slow)"
popup/item_2/id = 2

[connection signal="value_changed" from="Render Scale/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="Render Scale/HSlider" to="Render Scale/Label2" method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="Render Scale/HSlider" to="Render Scale/Label3" method="_on_h_slider_value_changed"]
[connection signal="pressed" from="Render Scale/Button" to="Render Scale/HSlider" method="_on_button_pressed"]
[connection signal="item_selected" from="GridContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="item_selected" from="GridContainer2/OptionButton2" to="." method="_on_option_button_2_item_selected"]
